--- a/assets/scss/page/changelog.scss
+++ b/assets/scss/page/changelog.scss
@@ -2,8 +2,8 @@
   width: 100%;
   background: $white;
   border-radius: 3px;
-  box-shadow: 0 0 5px rgba($black, .1);
-  margin-bottom: 30px;
+  overflow: hidden;
+  margin-bottom: 20px;
 
   &:last-child {
     margin-bottom: 30px;
