Change name section : "images" in "medias"

--- a/assets/scss/template/cta.scss
+++ b/assets/scss/template/cta.scss
@@ -14,6 +14,8 @@
   &:hover,
   &:focus {
     color: $white;
+    box-shadow: none;
+    outline: inherit;
     text-decoration: none;
     transition: all ease .3s;
   }
