Add function in "media" section
- Add rewrite filename function
- Add save data function
- Add modal function (js and style)
- Add Ajax
- Add translations

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'options/var';
 @import 'options/body';
 @import 'options/wp';
+@import 'options/modal';
 
 // Page
 @import 'page/changelog';
@@ -14,3 +15,4 @@
 @import 'template/title';
 @import 'template/card';
 @import 'template/cta';
+@import 'template/form';
