--- a/assets/scss/template/form.scss
+++ b/assets/scss/template/form.scss
@@ -1,27 +1,58 @@
 .wpk-form {
-  
-  fieldset {
-		label {
-			margin-bottom: 0;
-			color: $black;
-		}
 
-		input {
-			&[type="checkbox"] {
-				margin-right: 15px;
-			}
-		}
-	}
+  label {
+    margin-bottom: 0;
+    color: $black;
+    font-size: 16px;
+    font-weight: 400;
+  }
 
-	strong {
-		font-weight: 600;
-		color: $black;
-	}
-  
+  input {
+    &[type="checkbox"] {
+      margin-right: 15px;
+    }
+  }
+
+  strong {
+    font-weight: 600;
+    color: $black;
+  }
+
+  .check-group,
+  .radio-group {
+    margin-bottom: 30px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  .input-group {
+    margin-bottom: 30px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    div {
+      display: flex;
+      align-items: flex-start;
+
+      label {
+        width: 300px;
+        margin-right: 15px;
+      }
+
+      input {
+        width: 100%;
+      }
+    }
+  }
+
   .description {
     margin: 15px 0 0 0;
     font-style: italic;
-    font-size: 14px!important;
+    font-size: 14px !important;
     background: rgba($black, .025);
     border: 1px solid rgba($black, .05);
     border-radius: 3px;
@@ -29,10 +60,7 @@
   }
 
 
-  label {
-    font-size: 16px;
-    font-weight: 400;
-  }
+
 
   button {
     position: relative;
